# QPlayer

./: .gitignore  CATCH_UP_PLAN.md  Cargo.toml  FULL_FUNCTIONALITY.md  PORTING_GUIDE.md  QPlayer.sln  README.md  docfx.json
.github/workflows/: deploy-docs.yml
Qplayer-Csharp/QPlayer/Views/: CueDataHeaderControl.xaml.cs
StarlightDocNet/: ApiPage.cs  Dict2Obj.cs  MDStringBuilder.cs  Program.cs  StarlightDocNet.csproj  YML2MD.cs
StarlightDocNet/Properties/: launchSettings.json
crates/qplayer-audio/: Cargo.toml
crates/qplayer-audio/src/: decoder.rs
crates/qplayer-gui/src/waveform/: mod.rs
crates/qplayer-video/: Cargo.toml
crates/qplayer/examples/: play_file.rs
crates/qplayer/src/: main.rs
docs/: PORTING_GUIDE.md  astro.config.mjs  package-lock.json  package.json
docs/src/content/docs/: index.mdx
docs/src/content/docs/api/: .gitignore  index.mdx
plugins/hello-plugin/: Cargo.toml
qplayer-rust/: BUGS_AND_FEATURES.md  Cargo.toml
qplayer-rust/crates/qplayer/: Cargo.toml
qplayer-rust/crates/qplayer-audio/src/: decoder.rs  engine.rs  lib.rs  limiter_processor.rs  loop_processor.rs  metering_processor.rs  mixer.rs  resampler.rs
qplayer-rust/crates/qplayer-core/src/: eq.rs
qplayer-rust/crates/qplayer-core/src/cue/: mod.rs
qplayer-rust/crates/qplayer-core/src/showfile/: migration.rs  mod.rs
qplayer-rust/crates/qplayer-gui/: Cargo.toml
qplayer-rust/crates/qplayer-gui/src/: lib.rs
qplayer-rust/crates/qplayer-gui/src/active_cues/: mod.rs
qplayer-rust/crates/qplayer-gui/src/app/: mod.rs
qplayer-rust/crates/qplayer-gui/src/cue_list/: mod.rs
qplayer-rust/crates/qplayer-gui/src/inspector/: mod.rs
qplayer-rust/crates/qplayer-gui/src/transport/: mod.rs
qplayer-rust/crates/qplayer-gui/src/waveform/: mod.rs
qplayer-rust/crates/qplayer-plugin-api/src/: lib.rs
qplayer-rust/crates/qplayer-plugin-api/tests/: hello_plugin.rs
qplayer-rust/crates/qplayer-protocols/: Cargo.toml
qplayer-rust/crates/qplayer-video/src/: lib.rs
qplayer-rust/crates/qplayer/src/: main.rs  plugin_manager.rs
qplayer-rust/plugins/hello-plugin/src/: lib.rs
