[package]
name = "qplayer-gui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "egui + wgpu user interface"

[dependencies]
qplayer-core = { workspace = true }
eframe = { workspace = true }
egui = { workspace = true }
log = { workspace = true }
serde_json = { workspace = true }
rust_decimal = { workspace = true }
rfd = { workspace = true }
